--- a/index.Rmd
+++ b/index.Rmd
@@ -13,10 +13,10 @@ links:
 output:
   postcards::trestles
 ---
- 
+
 ## Bio
 
-Hi, I am Brad. I am curretly an Assistant Professor in the College of Business at Kutztown University of Pennsylvania. My main area of instruction is in Data Analytics, as well as teaching my very popular Sport Analytics (SPT 313) course.
+Hi, I am Brad. I am curretly an Assistant Professor in the College of Business at Kutztown University of Pennsylvania. My main area of instruction & research is in Data Analytics, as well as teaching my very popular Sport Analytics (SPT 313) course.
 
 My research focuses on using big data, the R programming language, and analytics to explore the impact of professional stadiums on neighboring communities. I use the proprietary Zillow ZTRAX database as well as U.S. Census and other forms of data to create robust, applied, and useful insight into how best to protect those livings in areas where stadiums are proposes for construction.
 
@@ -24,16 +24,26 @@ As well, my work in sport analytics, specifically the NFL, has been featured on 
 
 ## Education
 
-**University of Western Ontario** | London, Ontario, Canada
+**University of Western Ontario** \| London, Ontario, Canada
 
-Ph.D. in Socio-Cultural Studies | 2014
+Ph.D. in Socio-Cultural Studies \| 2014
 
-**The University of California, San Diego** | San Diego, California
+**The University of California, San Diego** \| San Diego, California
 
-Specialized Certificate: R for Data Analytics | 2021
+Specialized Certificate: R for Data Analytics \| 2021
 
 ## Experience
 
-**Kutztown University** | Assistant Professor | 2018 - Present
+**Kutztown University** \| Assistant Professor \| 2018 - Present
 
-**Keystone College** | Assistant Professor | 2014 - 2018
+**Keystone College** \| Assistant Professor \| 2014 - 2018
+
+## Recent Publications
+
+1.  Congelio, B. (2022). "Examining the Impact of New Stadium Construction on Local Property Prices Using Data Analytics and the Zillow ZTRAX Database." *Journal of Business, Economics, and Technology*. Spring 2022, 39-55.
+
+2.  Congelio, B. (2021). "Monitoring the Policing of Olympic Host Cities: A Novel Approach Using Data Analytics and the LA2028 Olympic Summer Games." *Journal of Olympic Studies* 2(2), 129-145.
+
+3.  Congelio, B. "Predicting the Impact of a New Stadium on Surrounding Neighborhoods Using a *k*-means Unsupervised Clustering Algorithm." Currently under peer review.
+
+4.  Congelio, B. "Examining a Megaevent's Impact on Foot Traffic to Local Businesses Using Mobility and Demographic Aggregation Data." Curently under peer review. Funding by a *SafeGraph* \$15,000 research grant.
