--- a/index.Rmd
+++ b/index.Rmd
@@ -24,7 +24,8 @@ As well, my work in sport analytics, specifically the NFL, has been featured on 
 
 ## Examples of Projects
 
-1.  [Customer Churn Prediction](https://bcongelio.shinyapps.io/ticket_churn/): Using ticket purchase data from the LA Kings (provided via the National Sports Analytics Intercollegiate Championship), I decided an **XGBoost** classification machine learning model that can predict (with roughly 90% accuracy) whether a ticket-buying customer is likely to return to a second game or not. Click the link above to view the model in its current ShinyApp format.
+1.  [Introduction to NFL Analytics with R](https://www.routledge.com/Introduction-to-NFL-Analytics-with-R/Congelio/p/book/9781032427751) (book, Routledge): It has become difficult to ignore the analytics movement within the NFL. An increasing number of coaches openly integrate advanced numbers into their game plan, and commentators, throughout broadcasts, use terms such as air yards, CPOE, and EPA on a casual basis. This rapid growth, combined with an increasing accessibility to NFL data, has helped create a burgeoning amateur analytics movement. However, because learning a coding language can be a difficult enough endeavor, *Introduction to NFL Analytics with R* is purposefully written in a more informal format than readers of similar books may be accustomed to, opting to provide step-by step instructions in a structured, jargon-free manner.
+2.  [Customer Churn Prediction](https://bcongelio.shinyapps.io/ticket_churn/): Using ticket purchase data from the LA Kings (provided via the National Sports Analytics Intercollegiate Championship), I decided an **XGBoost** classification machine learning model that can predict (with roughly 90% accuracy) whether a ticket-buying customer is likely to return to a second game or not. Click the link above to view the model in its current ShinyApp format.
 
 ## Education
 
