--- a/index.Rmd
+++ b/index.Rmd
@@ -10,13 +10,15 @@ links:
     url: "https://github.com/bcongelio"
   - label: Email
     url: "mailto:congelio@kutztown.edu"
+  - label: Workshops
+    url: "https://bradcongelio.com/workshops"
 output:
   postcards::trestles
 ---
 
 ## Bio
 
-Hi, I am Brad. I am currently an Assistant Professor in the College of Business at Kutztown University of Pennsylvania. My main area of instruction & research is in Data Analytics, as well as teaching my very popular Sport Analytics (SPT 313) course. I am also the author of [Introduction to NFL Analytics with R](https://www.routledge.com/Introduction-to-NFL-Analytics-with-R/Congelio/p/book/9781032427751), which is under contract with CRC Press and slated for publication in December 2023.
+Hi, I am Brad. I am currently an Assistant Professor in the College of Business at Kutztown University of Pennsylvania. My main area of instruction & research is in Data Analytics, as well as teaching my very popular Sport Analytics (SPT 313) course. I am also the author of [Introduction to NFL Analytics with R](https://www.routledge.com/Introduction-to-NFL-Analytics-with-R/Congelio/p/book/9781032427751) which was published with CRC Press in December of 2023.
 
 My research focuses on using big data, the R programming language, and analytics to explore the impact of professional stadiums on neighboring communities. I use the proprietary Zillow ZTRAX database as well as the U.S. Census and other forms of data to create robust, applied, and useful insight into how best to protect those livings in areas where stadiums are proposed for construction.
 
